--- a/1.0beta.md
+++ b/1.0beta.md
@@ -12,7 +12,7 @@
 - rewrote many areas of CSS
 - fixed remote input_select not showing the correct name
 - added more global_config options
-- added new layouts as addons
+- added new layouts for the frontpage as addons
 - split global_config up in multiple files to make addons possible
 - added more options to the frontpage
 - pressing a notification now takes you to a list of notifications by default, advanced users can take advantage of the more advance options popup cards can do.
@@ -25,6 +25,7 @@ The header would load up faster with CH, but the actual view would take much muc
 
 Enjoy!
 
+All info below is only meant for users of the Alpha version. If you haven't installed this yet you don't need this information!
 Note for users from the Alpha version:
 - if you made changes to views, please make a backup!
 - copy all the contents from the lovelace folder to your own (best would be to just delete your old one to make sure no things are left behind)
@@ -32,3 +33,13 @@ Note for users from the Alpha version:
 - copy the `/themes/` folder and copy it over your old ones (This is IMPORTANT)
 - change the path to your global_config folder inside of `configuration.yaml` to ```lovelace_gen: !include_dir_merge_named global_config/```
 - you will not need to redo your groups! only the global_config will need to be redone, all the group files have remained unchanged!
+
+Extra Note for 2 or 4 person households:
+You can now choose which frontpage you want to use, you can choose between the following layouts:
+1. default (which is the 2 large photo's and the smaller photo in the middle)
+2. 2-persons (this is 2 large photo's without the middle photo)
+3. 4-persons (4 large photo's)
+4. 4-persons (2 large and 2 smaller photo's)
+
+Please copy the correct frontpage from the addons view (you can find how to do this in the documentation which has been updated for this). In case of 4 persons you should also copy the fourth person input_select and automation (which are now default for new users) and you will need to fill in the global_config/addon folder.
+
