--- a/1.0beta.md
+++ b/1.0beta.md
@@ -18,6 +18,8 @@
 - pressing a notification now takes you to a list of notifications by default, advanced users can take advantage of the more advance options popup cards can do.
 - merged frontpage notifications inside of the notifications.yaml file
 - the footer now shows the logged in user
+- popups no longer need input_booleans
+- input_booleans above replaced with swipe-card
 - many minor fixes
 
 I had actually intended to move over completely with my header to CH, however I need exceptions to recreate this which made it highly unstable for use with the way I intend to show it. It works for a short period of time where it would bug, hang and reconnect/disconnect after changing to another view. After testing this for almost a week I consider it not usable in its current state and I will keep my custom header in place.
