--- a/1.0RC.md
+++ b/1.0RC.md
@@ -1,4 +1,4 @@
-Homekit Infused v.1.0 RC
+# Homekit Infused v.1.0 RC
 
 Hello all, it is finally here, Homekit Infused 1.0 Release Candidate. For all people that were holding off to install this because of the alpha/beta tags will be happy to know that this is essentially the final 1.0 version.
 If any change will come along soon it will only be minor changes. Alpha and Beta users please read the notes at the bottom.
